# ultimate-flipboard

./: CMakeLists.txt  README.md  justfile  prj.conf
boards/: nrf54h20dk_nrf54h20_cpuapp.overlay
docs/: flipdots-7x28-serial.md  nrf54h20-flipdots-uart.md
flipflop/: flipflop.ino
include/: flipdots.h  scoreboard.h  scoreboard_events.h
remote/: CMakeLists.txt  prj.conf
remote/src/: main.c
src/: flipdots.c  main.c  scoreboard.c
tests/scoreboard/: CMakeLists.txt  testcase.yaml
tests/scoreboard/src/: main.c
